--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "amadia",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "homepage": "https://madiaabogados.com.mx",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
